# config/ui/openapi.yaml
@@ -1870,14 +1870,16 @@ components:
         enum:
           - block_response
           - client_proxy_mode
+          - main_cache
           - branch_cache
+          - fakeip_cache
+          - probe_cache
           - block_query_type
           - block_ipv6
           - ad_block
           - prefer_ipv4
           - cn_answer_mode
           - prefer_ipv6
-          - main_cache
           - udp_fast_path
     UpstreamTagPath:
       name: upstreamTag
@@ -2640,7 +2642,7 @@ components:
           type: string
           description: |
             可用值依赖开关名：
-            - `block_response` / `branch_cache` / `block_query_type` / `block_ipv6` / `ad_block` / `prefer_ipv4` / `prefer_ipv6` / `main_cache` / `udp_fast_path`: `on` / `off`
+            - `block_response` / `main_cache` / `branch_cache` / `fakeip_cache` / `probe_cache` / `block_query_type` / `block_ipv6` / `ad_block` / `prefer_ipv4` / `prefer_ipv6` / `udp_fast_path`: `on` / `off`
             - `client_proxy_mode`: `all` / `blacklist` / `whitelist`
             - `cn_answer_mode`: `realip` / `fakeip`
     RequerySourceFile:
